# Swimming-in-Potential-Flow

./: .alexrc.yml  .clang-format  .cmake-format.json  .dockerignore  .gitignore  .gitmodules  .vstags  CMakeLists.txt  CMakePresets.json  DOCKER_INFO.md  Dockerfile  PROFILE.md  README.md  TODO.md  codecov.yml  docker-compose.yml  run.sh  vcpkg.json
.github/workflows/: alex.yml  code-linting.yml  codecov.yml  language-linting.yml  test.yml  update-readme.yml
.github/workflows-future/: codecov.yml
data_tag/v1.0.0/: 2021-08-19.16-37-16_collinear-swimmer_varyEpsilon.tar.xz
data_tag/v1.0.0/2021-08-19.14-24-14_collinear-swimmer_varyRelDisp/: std_err.txt
data_tag/v1.0.0/2021-08-19.16-37-16_collinear-swimmer_varyEpsilon/: std_err.txt
data_tag/v1.0.0/2021-08-19.16-41-44_collinear-swimmer_varyPhaseAngle/: std_err.txt
data_tag/v1.0.0_output_last_frame/2021-08-27.08-57-45_collinear-swimmer_varyRelDisp/: std_err.txt
data_tag/v1.5.0/2021-08-25.18-44-10_collinear-swimmer-wall_varyRelDisp/: std_err.txt
data_tag/v1.5.0/2021-08-26.05-16-44_collinear-swimmer-wall_varyEpsilon/: std_err.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/environments/: PC_Ubuntu.dev
docs/: Doxyfile
docs/html/: Engine_8cpp (Case Conflict).html  Engine_8cpp.html  Engine_8cpp__incl (Case Conflict).md5  Engine_8cpp__incl.map  Engine_8cpp__incl.md5  Engine_8cpp_source (Case Conflict).html  Engine_8cpp_source.html  Engine_8hpp (Case Conflict).html  Engine_8hpp (Case Conflict).js  Engine_8hpp.html  Engine_8hpp__dep__incl (Case Conflict).md5  Engine_8hpp__dep__incl.map  Engine_8hpp__incl (Case Conflict).map  Engine_8hpp__incl.map  Engine_8hpp__incl.md5  Engine_8hpp_source (Case Conflict).html  Engine_8hpp_source.html  GSDUtilPy_8py.html  GSDUtilPy_8py_source.html  GSDUtil_8cpp.html  GSDUtil_8cpp__incl.map  GSDUtil_8cpp__incl.md5  GSDUtil_8cpp_source.html  GSDUtil_8hpp.html  GSDUtil_8hpp__dep__incl.map  GSDUtil_8hpp__dep__incl.md5  GSDUtil_8hpp__incl.map  GSDUtil_8hpp__incl.md5  GSDUtil_8hpp_source.html  GSDUtil_8py.html  GSDUtil_8py_source.html  LICENSE.html  LICENSE_source.html  PotentialHydrodynamics_8cpp (Case Conflict).html  PotentialHydrodynamics_8cpp.html  PotentialHydrodynamics_8cpp__incl (Case Conflict).map  PotentialHydrodynamics_8cpp__incl.map  PotentialHydrodynamics_8cpp__incl.md5  PotentialHydrodynamics_8cpp_source (Case Conflict).html  PotentialHydrodynamics_8cpp_source.html  (+1986 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+79 more)
docs/theme/xml/: layout.xml
include/cmake_modules/: FINDTBB.cmake  FindAVX.cmake  FindBLAS.cmake  FindCATCH2.cmake  FindCUB.cmake  FindMKL.cmake  FindMKLDNN.cmake  FindSpdlog.cmake  Findspdlog.cmake
input/: collinear-wall-problem.py
input/starter_gsd/: collinear_swimmer_wall.gsd
jupyter_notebooks/: Dockerfile  internal_dynamics_comparison.ipynb  isolated_swimmer_average_locater_kinematics.ipynb  orientation_dynamics.ipynb
jupyter_notebooks/old/: internal_dynamics_comparison.ipynb  orientation_dynamics.ipynb
profile/: MacOS.bash  PROFILE.md  README.md  macOS.bash
profile/Linux/: linux.bash
profile/MacOS/: MacOS.bash
python/: GSDUtil.py  GSDUtilPy.py  README.md  plotStyling.py  simulationDataLoad.py
python/analysis/: collinear-swimmer-aggregate-analysis.py  collinear-swimmer-analysis.py  collinear-swimmer-individual-analysis.py  collinear-swimmer-internal-dynamics-aggregate-analysis.py  collinear-swimmer-internal-dynamics-individual-analysis.py  collinear-swimmer-isolated-aggregate-analysis.py  collinear-swimmer-isolated-individual-analysis.py  collinear-swimmer-wall-aggregate-analysis.py  collinear-swimmer-wall-individual-analysis.py
python/initial_configurations/: collinear-swimmer-configuration.py  collinear-swimmer-internal-dynamics-configuration.py  collinear-swimmer-isolated-configuration.py  collinear-swimmer-wall-configuration.py  collinear-swimmer-wall-internal-dynamics.py
requirements/: README.md
requirements/C++/: libraries.sh
requirements/Perl/: cpanfile  cpanfile.txt
requirements/Python/: environment.yml  requirements.txt  requirements.yml
scripts/: collinear-swimmer-internal-dynamics.pl  collinear-swimmer-isolated.pl  collinear-swimmer-wall.pl  collinear-swimmer.pl
src/: CMakeLists.txt  README.md  main.cpp
src/cuda_helpers/: README.md
src/data_io/: CMakeLists.txt  GSDReader.cpp  GSDReader.hpp  GSDUtil.cpp  GSDUtil.hpp  gsd.h
src/forces/: CMakeLists.txt  PotentialHydrodynamics.cpp  PotentialHydrodynamics.hpp  potentialHydrodynamics.cpp  potentialHydrodynamics.hpp
src/helpers/cuda/: README.md  helper_timer.h
src/helpers/eigen/: CMakeLists.txt  helper_eigenTensorConversion.hpp  tensorconversion.h
src/integrators/: CMakeLists.txt  RungeKutta4.cpp  RungeKutta4.hpp  rungeKutta4.cpp  rungeKutta4.hpp
src/simulation_system/: CMakeLists.txt  Engine.cpp  Engine.hpp  ProgressBar.hpp  SystemData.cpp  SystemData.hpp  engine.cpp  engine.hpp  progressBar.hpp  systemData.cpp  systemData.hpp
test/: CMakeLists.txt  README.md  TestMain.cpp  TestSimulation.cpp  TestSimulationSystem.cpp  test-simulation.cpp  test-simulation_system.cpp  testMain.cpp  testSimulationBuild.cpp  testsSimulationBuild.cpp
test/input/: data.gsd
test/input/collinear_swimmer_isolated/: initial_frame_dt1e-2.gsd  initial_frame_dt1e-6.gsd
test/input/collinear_swimmer_wall/: initial_frame_dt1e-1_Z-height6.gsd  initial_frame_dt1e-2_Z-height6.gsd  initial_frame_dt1e-6_Z-height6.gsd
test/simulation_system/: CMakeLists.txt  TestSystemData.cpp  TestSystemData.hpp  test-systemData.cpp  test-systemData.hpp  testSystemData.cpp  testSystemData.hpp
tests/: CMakeLists.txt  data.gsd  testsMain.cpp  testsSimulationBuild.cpp
(+4443 files in other folders)
